--- a/Teaching.html
+++ b/Teaching.html
@@ -28,13 +28,13 @@
 <h1>DS 675 Machine Leaning (Fall 2023)</h1>
 </div>
  <h2>General Information</h2>
-    <h2><b>Course Number</b>: DS675-001 CRN 96973</h2>
+    <p><b>Course Number</b>: DS675-001 CRN 96973<p>
     <p><b>Lecture Hours</b>: 11:30am-12:50pm, Monday and Wednesday</p>
     <p><b>Lecture Location</b>: Kupfrian Hall, Room 106</p>
 
     <h2>Instructor</h2>
-    <p>Shuai Zhang</p>
-    <p><b>Email</b>: <a href="mailto:sz457@njit.edu">sz457@njit.edu</a></p>
+    <p> Dr.Shuai Zhang</p>
+    <p><b>Email</b>: sz457 at njit dot edu</p>
     <p><b>Office Room</b>: GITC 4410</p>
     <p><b>Office Hour</b>: 1:00-2:20 pm, Monday and Wednesday</p>
 
@@ -43,6 +43,128 @@
 
   <h2>Course Overview</h2>
   <p>This course is an introduction to machine learning and contains both theory and applications. Students will get exposure to a broad range of machine learning methods and hands-on practice with real data. Topics include theory of generalization, model selection, gradient descent, perceptron, regression, classification, logistic regression, neural networks, support vector machines, dimensionality reduction, deep learning, etc.</p>
+
+    <!-- Prerequisites -->
+    <h2>Prerequisites</h2>
+    <p>Basic probability, linear algebra, computer programming, and graduate or undergraduate senior standing, or approval of the instructor.</p>
+
+    <!-- Learning Outcomes -->
+    <h2>Learning Outcomes</h2>
+    <ul>
+        <li>Understand the background of machine learning.</li>
+        <li>Understand a wide variety of learning algorithms.</li>
+        <li>Understand how to select and evaluate machine learning models.</li>
+        <li>Apply the algorithms to real problems and optimize their parameters.</li>
+    </ul>
+
+    <!-- Textbooks -->
+    <h2>Textbooks</h2>
+    <p>There will be no required textbooks for the class. Some of the class material, however, will be based on content from the following books (none of which you are required to purchase).</p>
+    <ul>
+        <li>Hal Daumé, <em>A Course in Machine Learning</em></li>
+        <li>Abu-Mostafa, Magdon-Ismail, Lin: <em>Learning From Data</em></li>
+    </ul>
+        <!-- Assignments -->
+    <h2>Assignments</h2>
+    <p>There will be 4-6 assignments throughout the semester. Each assignment consists of several small tasks where selected code needs to be completed. Each assignment has its own detailed instructions. In addition, own research on the details of the implementation needs to be conducted. Each assignment needs to be completed in 7-14 days and submitted via Canvas.</p>
+
+    <!-- Project -->
+    <h2>Project</h2>
+    <ul>
+        <li>The project can be carried out by a group of at most 3 students.</li>
+        <li>You can choose any topics as long as they are related to machine learning.</li>
+        <li>Each group is required to submit a project proposal and a final report.</li>
+        <li>Each group is required to give a Final Presentation (10 minutes).</li>
+    </ul>
+    <h3>Final Report & Presentation:</h3>
+    <ul>
+        <li>Introduction, including a summary of the project, related work/methods, and the results of this project.</li>
+        <li>Problem description, including a detailed description of the problem you address in this project.</li>
+        <li>Methodology, including a detailed description of the methods you developed or used.</li>
+        <li>Experiments, including experiment setting, results, and your observations.</li>
+        <li>Conclusion and future work, including a summary of the main contributions of this project and potential future directions.</li>
+        <li>Contributions of each team member.</li>
+    </ul>
+        <h1>Grading Policies</h1>
+    <ul>
+        <li>Assignments (30%)</li>
+        <li>Midterm exam (25%)</li>
+        <li>Final Exam (25%)</li>
+        <li>Project (20%)</li>
+    </ul>
+
+    <!-- Grading Scale -->
+    <h2>Grading Scale</h2>
+    <ul>
+        <li>A: 93-100</li>
+        <li>B+: 84-92</li>
+        <li>B: 76-83</li>
+        <li>C+: 68-75</li>
+        <li>C: 60-67</li>
+        <li>F: 0-59</li>
+    </ul>
+
+    <!-- Grade Corrections -->
+    <h2>Grade Corrections</h2>
+    <p>Check the grades in course work and report errors promptly. Please try and resolve any issue within one week of the grade notification.</p>
+
+    <!-- Course Policies -->
+    <h2>Course Policies</h2>
+    <h3>Absence</h3>
+    <p>If you miss a class, it is up to you to make up for the lost time. Missing two exams leads to an automatic F in the course. If you miss one exam, you must contact the Dean of Students (DOS) within 2 working days from the day the reason for the absence is lifted with all necessary documentation. If DOS approves, your missing exam grade will be set equal to the average of the non-missing exam grades.</p>
+
+    <h3>Collaboration and External Resources for Assignments</h3>
+    <p>Some homework problems will be challenging. You are advised to first try and solve all the problems on your own. You are also allowed to collaborate with your classmates and search for solutions online. But you should use such solutions only if you understand them completely (admitting that you do not understand something is way better than copying things you do not understand). Also, make sure to give the appropriate credit and citation.</p>
+
+    <h3>Late Policy</h3>
+    <ul>
+        <li> There will be a 10% penalty of total regular points for every day an assignment is late.</li>
+        <li> Max. late submission is 7 days late.</li>
+    </ul>
+
+    <h2>Academic Support System</h2>
+    <p><a href="https://www5.njit.edu/registrar/calendars/" target="_blank">NJIT Academic Calendar</a>: This contains drop/add and other important dates.</p>
+
+    <h3>Academic Integrity</h3>
+    <p>Academic Integrity is the cornerstone of higher education and is central to the ideals of this course and the university. Cheating is strictly prohibited and devalues the degree that you are working on. As a member of the NJIT community, it is your responsibility to protect your educational investment by knowing and following the academic code of integrity policy that is found at: <a href="http:www5.njit.edupoliciessitespoliciesfiles/academic-integrity-code.pdf" target="_blank">Academic Integrity Code</a>.</p>
+    <p>Please note that it is my professional obligation and responsibility to report any academic misconduct to the Dean of Students Office. Any student found in violation of the code by cheating, plagiarizing or using any online software inappropriately will result in disciplinary action. This may include a failing grade of F, and/or suspension or dismissal from the university. If you have any questions about the code of Academic Integrity, please contact the Dean of Students Office at <a href="mailto:dos@njit.edu">dos@njit.edu</a>.</p>
+
+    <h3>Academic Support and Student Affairs</h3>
+    <p>From questions about becoming a student at NJIT – to student engagement – to searching for information on career development, the Division of Academic Support and Student Affairs Staff is here to help.</p>
+
+    <h3>Additional Tutoring Centers</h3>
+    <ul>
+        <li>The Writing Center</li>
+    </ul>
+
+    <h3>Bookstore</h3>
+    <p>NJIT has a bookstore.</p>
+
+    <h3>Canvas Help Page</h3>
+    <p>Canvas support for students.</p>
+
+    <h3>Center for Counseling and Psychological Services</h3>
+    <p>The NJIT Center for Counseling and Psychological Services (C-CAPS) is committed to assisting students in the achievement of their academic goals as well as benefiting from their personal experience on campus. College life can be personally challenging and stressful at times. We believe that the educational process is an important component of the development of the individual as a whole person. Our goal is to optimize the college experience and improve the quality of the lives of our students by promoting their mental health and facilitating students’ personal, academic, and professional growth.</p>
+
+    <h3>The Learning Center</h3>
+    <p>Our mission is to assist students both in the classroom and beyond by providing tutorial services, academic coaching, academic and personal enrichment workshops, and staff and peer support so students can meet the demands of their coursework and are prepared for life after graduation.</p>
+
+    <h3>Robert W. Van Houten Library</h3>
+    <p>The Van Houten Library offers electronic and print resources essential to the mission of New Jersey's science and technology university, including a core collection of academic books, databases, and journals, as well as research and consultation services.</p>
+
+    <h3>Student Disability Services</h3>
+    <p>The Disability Support Services office works in partnership with administrators, faculty, and staff to provide reasonable accommodations and support services for students with disabilities that have provided our office with documentation to receive services.</p>
+
+    <h3>Student Financial Aid Services</h3>
+    <p>Student Financial Aid Services (SFAS) at NJIT is committed to providing you with every opportunity to obtain funding to support your undergraduate educational costs at NJIT.</p>
+
+    <!-- Acknowledgment -->
+    <h2>Acknowledgment</h2>
+    <p>A large portion of the course materials are adapted from Dr. Malik Magdon-Ismail’s machine learning course and Dr. Lijing Wang’s machine learning course, and Dr. Yao Ma’s machine learning course. Some of the materials are adopted from machine learning courses developed by Dr. Lijing Wang and Dr. Yao Ma.</p>
+
+
+
+  
 </td>
 </tr>
 </table>
