--- a/Teaching.html
+++ b/Teaching.html
@@ -84,6 +84,14 @@
         <li>Conclusion and future work, including a summary of the main contributions of this project and potential future directions.</li>
         <li>Contributions of each team member.</li>
     </ul>
+
+  <h2>Important Dates</h2>
+<ul>
+    <li>Midterm (10/23/2023)</li>
+    <li>Project Presentation &amp; Report (12/10/2023)</li>
+    <li>Final Exam (TBA)</li>
+</ul>
+  
         <h2>Grading Policies</h2>
     <ul>
         <li>Assignments (30%)</li>
