--- a/index.html
+++ b/index.html
@@ -66,8 +66,14 @@ more efficient AI applications. As part of my research, my interests covering th
 </ul>  
 <h2>Recent news</h2>
 <ul>
+<li><p>Sep. 2023: Our paper  <a href="https://openreview.net/forum?id=HWGWeaN76q">"On the Convergence and Sample Complexity Analysis of Deep Q-Networks with 
+-Greedy Exploration"</a>  is accepted to the NeurIPS 2023! </p>
+</li>  
+<li><p>Aug. 2023: I joined NJIT as an Assistant Professor. </p></li>
 <li><p>Apr. 2023: One paper has been accepted at ICML 2023. </p></li>
-<li><p>Mar. 2023: Invited talk for the AI Cluster Seminar at University at Albany. </p>
+<li><p>Mar. 2023: Invited talk for the Data Science Seminar at NJIT. </p>
+</li>
+  <li><p>Mar. 2023: Invited talk for the AI Cluster Seminar at University at Albany. </p>
 </li>
 <li><p>Mar. 2023: Invited talk for the Computer Science Seminar at UMass Lowell. </p>
 </li>
