--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ E-mail: <a href="mailto:sz457@njit.edu">sz457 at njit.edu </a> <br />
 <p>Shuai Zhang joined NJIT from Rensselaer Polytechnic Institute (RPI), where he was a postdoctoral researcher focused on theoretical and algorithmic foundations of deep learning. His interests span deep learning, optimization, data science and signal processing, with an emphasis on learning theory – the design of machine learning algorithms – and the development of efficient and trustworthy AI. Challenges to effective AI implementation remain, however, such as the high cost of computation, the limited availability of high-quality labeled data, generalizability across domains, and the lack of transparency – the absence of explanations for how AI works, raising safety concerns in areas such as healthcare and autonomous control systems. Zhang develops theoretical explanations of how AI works. He also creates learning algorithms to reduce AI model complexity and the required number of training samples, improving the reliability and efficiency of AI systems in applications such as cyber-physical systems, computer vision, and spatial-temporal data analysis. Zhang has collaborated with the IBM Thomas J. Watson Research Center and the MIT-IBM Watson AI Lab on scalable and trustworthy AI projects. His research has been published in machine learning conferences and journals, including ICML, NeurIPS, ICLR, and IEEE TNNLS. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering (ECSE) at Rensselaer Polytechnic Institute (RPI) in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. He received his Bachelor's degree in Electrical Engineering (EE) at the University of Science and Technology of China (USTC) in 2016. </p><div class="infoblock">
 <div class="blocktitle"></div>
 <div class="blockcontent">
-<p>I am always looking for self-motivated students (PhD with RA/TA support, Masters, undergrads) with interests in data science, machine/deep learning, and signal processing. Interested candidates are strongly encouraged to contact me by sz457 at njit.edu, together with the resume and transcripts.</p>
+<p>I am always looking for self-motivated students (PhD with RA/TA support, Masters, undergrads) with interests in data science, machine/deep learning, and signal processing.</p>
+<p> Interested candidates are strongly encouraged to contact me by sz457 at njit.edu, together with the resume and transcripts.</p>
 </div>
 </div>
 <h2>Research</h2>
@@ -63,6 +64,7 @@ more efficient AI applications. As part of my research, my interests cover the f
 </li>
 <li><p>Probability and Statistical Inference</p>
 </li>
+<p> My current research interests lie in parameter-efficient transfer learning with foundation models and sparse learning, especially for applications involving spatial-temporal data. </p>
 </ul>  
 <h2>Recent news</h2>
 <ul>
