--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ more efficient AI applications. As part of my research, my interests cover the f
 <li><p>Probability and Statistical Inference</p>
 </li>
 <p> My current research interests lie in parameter-efficient transfer learning with foundation models and sparse learning, especially for applications involving spatial-temporal data. </p>
+  <center> <img src="research/research.pdf" width="750" height=auto> </center>
 </ul>  
 <h2>Recent news</h2>
 <ul>
