--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ more efficient AI applications. As part of my research, my interests cover the f
 </li>
 </ul>  
   <p> My current research interests lie in parameter-efficient transfer learning with foundation models and sparse learning, especially for applications involving spatial-temporal data. </p>
-  <center> <img src="Research/research.pdf" width="750" height=auto> </center>
+  <center> <img src="Research/research.jpg" width="750" height=auto> </center>
 <h2>Recent news</h2>
 <ul>
 <li><p>Sep. 2023: Our paper  <a href="https://openreview.net/forum?id=HWGWeaN76q">"On the Convergence and Sample Complexity Analysis of Deep Q-Networks with 
