--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@ E-mail: <a href="mailto:sz457@njit.edu">sz457 at njit.edu </a> <br />
 <p>I joined NJIT from Rensselaer Polytechnic Institute (RPI), where I was a postdoctoral researcher focused on theoretical and algorithmic foundations of deep learning.  I received my Ph.D. from the Department of Electrical, Computer, and Systems Engineering (ECSE) at Rensselaer Polytechnic Institute (RPI) in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. I received my Bachelor's degree in Electrical Engineering (EE) at the University of Science and Technology of China (USTC) in 2016. My interests span deep learning, optimization, data science, and signal processing, with a particular emphasis on learning theory – the design of machine learning algorithms – as well as the development of efficient and trustworthy AI. </p><div class="infoblock">
 <div class="blocktitle"></div>
 <div class="blockcontent">
-<p>I am always looking for self-motivated students (PhD with RA/TA support, Masters, undergrads) with interests in data science, machine/deep learning, and signal processing.</p>
+<p> I am always looking for self-motivated students (PhD with RA/TA support, Masters, undergrads) with interests in data science, machine/deep learning, and signal processing.</p>
 <p> Interested candidates are strongly encouraged to contact me by sz457 at njit.edu, together with the resume and transcripts.</p>
 </div>
 </div>
 <h2>Research</h2>
-<p> My long-term research objective is to study the theoretical foundations of artificial
+<p> As AI continues to advance, it is imperative to address several challenges to ensure not only the widespread adoption but also the safe and efficient implementation of this technology. These challenges include the high cost of computation, the limited availability of high-quality labeled data, generalizability across domains, and the lack of transparency – specifically, the absence of explanations for how AI works. 
+  My long-term research objective is to study the theoretical foundations of artificial
 intelligence and design more principled and efficient algorithms for better, safer, and
 more efficient AI applications. As part of my research, my interests cover the following areas: </p>
 <ul>
