--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="research.html">Projects</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
+  <div class="menu-category">Opening</div>
+<div class="menu-item"><a href="open.html">Projects</a></div>
   <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="Teaching.html">DS675 (Fall 2023)</a></div>
 <div class="menu-category">Others</div>
