--- a/opening.html
+++ b/opening.html
@@ -17,10 +17,9 @@
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="research.html">Projects</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-  <div class="menu-category">Open Position</div>
-<div class="menu-item"><a href="opening.html">DS675 (Fall 2023)</a></div>
-   class="current"
-  <div class="menu-category">Teaching</div>
+<div class="menu-category">Opening</div>
+<div class="menu-item"><a href="opening.html",class="current">Opening (Fall 2023)</a></div>
+<div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="Teaching.html">DS675 (Fall 2023)</a></div>
 <div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html">Talks</a></div>
@@ -28,4 +27,15 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Projects</h1>
+<h1>Open Postions</h1>
+
+ I am always looking for highly motivated students (Ph.D., Master, Undergrads) interested in research  involving optimization for machine learning, sparse learning, and applications of machine learning algorithms in structured data (e.g., spatial data and temporal data). 
+
+Topics (included but not limited to):  
+
+-	Learning Theory: generalization ability of deep learning model & algorithms.
+-	Non-convex Optimization: convergence analysis of training emerging neural networks, convergence analysis of other non-convex machine learning problems.
+-	Parameter-efficient Transfer Learning: focusing on both the theoretical foundations and algorithm design of parameter-efficient transfer learning approach, especially in the applications involved foundation models (Large Language Models).
+-	Deep Reinforcement Learning: Transfer learning and RL from human feedback 
+-	Graph Neural Network: graph sampling & sparsification in GNN learning.
+-	Spatial-temporal Data Analysis.
