--- a/opening.html
+++ b/opening.html
@@ -35,7 +35,23 @@
 
 <li>	<b>Learning Theory</b>: generalization ability of deep learning model & algorithms. </li>
 <li>	<b>	Non-convex Optimization </b>: convergence analysis of training emerging neural networks, convergence analysis of other non-convex machine learning problems. </li>
-<li>	<b> Parameter-efficient Transfer Learning </b>: focusing on both the theoretical foundations and algorithm design of parameter-efficient transfer learning approach, especially in the applications involved foundation models (Large Language Models). </li>
+<li>	<b> Parameter-efficient Transfer Learning </b>: focusing on both the theoretical foundations and algorithm design of parameter-efficient transfer learning approach, especially in the applications involved in foundation models (Large Language Models). </li>
 <li>	<b>	Deep Reinforcement Learning </b>: Transfer learning and RL from human feedback. </li> 
 <li>	<b>	Graph Neural Network </b>: graph sampling & sparsification in GNN learning. </li>
 <li>	<b>	Structured Data Analysis</b>: spatial data, temporal data. </li>
+
+<h2>PhD (RA/TA) opening:</h2>
+  <ul>
+    <li> 2-3 full-funded Ph.D. positions with scholarships (TA/RA), including tuition, insurance, and living allowance.</li>
+    <li> I am seeking candidates with a strong interest in non-convex optimization problems and fast algorithm design related to ML/AI or a strong mathematical background. A good mathematical foundation, coding skills, and communication abilities are essential. Applicants with undergraduate or higher degrees in CS/EE/Math/Stat  are welcome. Experience with deep learning frameworks is a plus. </li>
+  </ul>
+
+  <h2>Contact Information:</h2>
+  <ul>
+    <li>Email: <a href="mailto:sz457@njit.edu?subject=PhD%20Application%20with%20{your%20name}">sz457@njit.edu</a> (Please use the subject "PhD Application with {your name}")</li>
+    <li>Please attach your CV, transcript, and a brief self-introduction along with your research interests.</li>
+  </ul>
+
+  <h2>School Background:</h2>
+  <p>New Jersey Institute of Technology (NJIT) was ranked 90th in the 2022 QS World University Rankings in the United States and 75th in computer science. NJIT has been recognized as one of the best-guided and most cost-effective universities in the northeastern United States. Located in Newark, New Jersey, it is approximately a 30-minute drive from Manhattan, New York, offering abundant internship and employment opportunities. Newark has an international airport, a well-developed light rail public transportation system, and convenient transportation.</p>
+ 
