--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,9 @@
 <h2>Selected Publications</h2>
 <p>* represents equal contribution</p>
  <ol>
+<li><p><b>Shuai Zhang</b>, Hongkang Li, Meng Wang, Miao Liu, Pin-Yu Chen, Songtao Lu, Sijia Liu, Keerthiram Murugesan, Subhajit Chaudhury. “<em>On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Epsilon-Greedy Exploration.</em>” Neural Information Processing Systems (<b>NeurIPS</b>), 2023.
+</li>
+   
 <li><p>Nowaz Chowdhury, <b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen. “<em>Patch-level Routing in Mixture-of-Experts is Provably Sample-efficient for Convolutional Neural Networks.</em>” In Proc. of 2023 International Conference on Machine Learning (<b>ICML</b>), 2023. [<a href="Pub/ICML23.pdf">pdf</a>]</p>
 </li>
   
@@ -71,8 +74,7 @@
   
 <h2>Preprint</h2>  
 <ol>
-<li><p><b>Shuai Zhang</b>, Hongkang Li, Meng Wang, Miao Liu, Pin-Yu Chen, Songtao Lu, Sijia Liu, Keerthiram Murugesan, Subhajit Chaudhury. “<em>On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Epsilon-Greedy Exploration.</em>” Submitted to Neural Information Processing Systems (<b>NeurIPS</b>).
-</li>
+
   
   <li><p>Hongkang Li, <b>Shuai Zhang</b>, Meng Wang, Yihua Zhang, Pin-Yu Chen, Sijia Liu. “<em>Does promoting the minority group always improve generalization? A theoretical study of one-hidden-layer neural networks on group imbalance.</em>” Submitted to IEEE Journal of Selected Topics in Signal Processing (<b>JSTSP</b>).
 </li>
