--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
 <div class="menu-item"><a href="research.html">Projects</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
 <div class="menu-category">Opening</div>
-<div class="menu-item"><a href="opening.html">Opening (Fall 2023)</a></div>
+<div class="menu-item"><a href="opening.html">Opening</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="Teaching.html">DS675 (Fall 2023)</a></div>
 <div class="menu-category">Others</div>
