--- a/opening.html
+++ b/opening.html
@@ -52,6 +52,6 @@
     <li>Please attach your CV, transcript, and a brief self-introduction along with your research interests.</li>
   </ul>
 
-  <h2>School Background:</h2>
+  <h2>About NJIT:</h2>
   <p>New Jersey Institute of Technology (NJIT) was ranked 90th in the 2022 QS World University Rankings in the United States and 75th in computer science. NJIT has been recognized as one of the best-guided and most cost-effective universities in the northeastern United States. Located in Newark, New Jersey, it is approximately a 30-minute drive from Manhattan, New York, offering abundant internship and employment opportunities. Newark has an international airport, a well-developed light rail public transportation system, and convenient transportation.</p>
  
