--- a/opening.html
+++ b/opening.html
@@ -32,14 +32,14 @@
 <p> I am always looking for highly motivated students (Ph.D., Master, Undergrads) interested in research  involving optimization for machine learning, sparse learning, and applications of machine learning algorithms in structured data (e.g., spatial data and temporal data). </p>
 
 <p>Topics (included but not limited to): </p> 
-
-<li>	<b>Learning Theory</b>: generalization ability of deep learning model & algorithms. </li>
+<ul>
+<li><p>	<b>Learning Theory</b>: generalization ability of deep learning model & algorithms. </p> </li>
 <li>	<b>	Non-convex Optimization </b>: convergence analysis of training emerging neural networks, convergence analysis of other non-convex machine learning problems. </li>
 <li>	<b> Parameter-efficient Transfer Learning </b>: focusing on both the theoretical foundations and algorithm design of parameter-efficient transfer learning approach, especially in the applications involved in foundation models (Large Language Models). </li>
 <li>	<b>	Deep Reinforcement Learning </b>: Transfer learning and RL from human feedback. </li> 
 <li>	<b>	Graph Neural Network </b>: graph sampling & sparsification in GNN learning. </li>
 <li>	<b>	Structured Data Analysis</b>: spatial data, temporal data. </li>
-
+</ul>
 <h2>PhD (RA/TA) opening:</h2>
   <ul>
     <li> 2-3 full-funded Ph.D. positions with scholarships (TA/RA), including tuition, insurance, and living allowance.</li>
