--- a/opening.html
+++ b/opening.html
@@ -34,22 +34,22 @@
 <p>Topics (included but not limited to): </p> 
 <ul>
 <li><p>	<b>Learning Theory</b>: generalization ability of deep learning model & algorithms. </p> </li>
-<li>	<b>	Non-convex Optimization </b>: convergence analysis of training emerging neural networks, convergence analysis of other non-convex machine learning problems. </li>
-<li>	<b> Parameter-efficient Transfer Learning </b>: focusing on both the theoretical foundations and algorithm design of parameter-efficient transfer learning approach, especially in the applications involved in foundation models (Large Language Models). </li>
-<li>	<b>	Deep Reinforcement Learning </b>: Transfer learning and RL from human feedback. </li> 
-<li>	<b>	Graph Neural Network </b>: graph sampling & sparsification in GNN learning. </li>
-<li>	<b>	Structured Data Analysis</b>: spatial data, temporal data. </li>
+<li> <p>	<b>	Non-convex Optimization </b>: convergence analysis of training emerging neural networks, convergence analysis of other non-convex machine learning problems.</p> </li> 
+<li> <p>	<b> Parameter-efficient Transfer Learning </b>: focusing on both the theoretical foundations and algorithm design of parameter-efficient transfer learning approach, especially in the applications involved in foundation models (Large Language Models). </p> </li>
+<li> <p>	<b>	Deep Reinforcement Learning </b>: Transfer learning and RL from human feedback. </p> </li> 
+<li>	<p><b>	Graph Neural Network </b>: graph sampling & sparsification in GNN learning. </p></li>
+<li><p><b>	Structured Data Analysis</b>: spatial data, temporal data. </p></li>
 </ul>
 <h2>PhD (RA/TA) opening:</h2>
   <ul>
-    <li> 2-3 full-funded Ph.D. positions with scholarships (TA/RA), including tuition, insurance, and living allowance.</li>
-    <li> I am seeking candidates with a strong interest in non-convex optimization problems and fast algorithm design related to ML/AI or a strong mathematical background. A good mathematical foundation, coding skills, and communication abilities are essential. Applicants with undergraduate or higher degrees in CS/EE/Math/Stat  are welcome. Experience with deep learning frameworks is a plus. </li>
+    <li><p> 2-3 full-funded Ph.D. positions with scholarships (TA/RA), including tuition, insurance, and living allowance.</p> </li>
+    <li><p> I am seeking candidates with a strong interest in non-convex optimization problems and fast algorithm design related to ML/AI or a strong mathematical background. A good mathematical foundation, coding skills, and communication abilities are essential. Applicants with undergraduate or higher degrees in CS/EE/Math/Stat  are welcome. Experience with deep learning frameworks is a plus.</p> </li>
   </ul>
 
   <h2>Contact Information:</h2>
   <ul>
-    <li>Email: <a href="mailto:sz457@njit.edu?subject=PhD%20Application%20with%20{your%20name}">sz457@njit.edu</a> (Please use the subject "PhD Application with {your name}")</li>
-    <li>Please attach your CV, transcript, and a brief self-introduction along with your research interests.</li>
+    <li><p>Email: <a href="mailto:sz457@njit.edu?subject=PhD%20Application%20with%20{your%20name}">sz457@njit.edu</a> (Please use the subject "PhD Application with {your name}")</p> </li>
+    <li><p> Please attach your CV, transcript, and a brief self-introduction along with your research interests.</p> </li>
   </ul>
 
   <h2>About NJIT:</h2>
