--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h1>Shuai Zhang</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="cv/bio.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<img src="cv/shuaizhang.PNG" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p>Assistant Professor <br />
   Department of Data Science <br />
   New Jersey Institute of Technology <br />
