--- a/publications.html
+++ b/publications.html
@@ -20,7 +20,7 @@
 <div class="menu-category">Opening</div>
 <div class="menu-item"><a href="opening.html">Opening</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="Teaching.html">DS675 (Fall 2023)</a></div>
+<div class="menu-item"><a href="Teaching.html">Teaching</a></div>
 <div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
