--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,16 @@
 <h2>Selected Publications</h2>
 <p>* represents equal contribution</p>
  <ol>
+
+   <li><p><b>Shuai Zhang</b>, Heshan Devaka Fernando, Miao Liu, Keerthiram Murugesan, Songtao Lu, Pin-Yu Chen, Tianyi Chen, Meng Wang. “<em>SF-DQN: Provable Knowledge Transfer using Successor Feature for Deep Reinforcement Learning.</em>” International Conference on Machine Learning (<b>ICML</b>), 2024.</p></li>
+  
+   <li><p>Shusen Jing, Anlan Yu, <b>Shuai Zhang</b>, Songyang Zhang. “<em>FedSC: Provable Federated Self-supervised Learning with Spectral Contrastive Objective over Non-i.i.d. Data.</em>” International Conference on Machine Learning (<b>ICML</b>), 2024.</p></li>
+  
+   <li><p>Hongkang Li, <b>Shuai Zhang</b>, Meng Wang, Yihua Zhang, Pin-Yu Chen, Sijia Liu. “<em>Does promoting the minority group always improve generalization? A theoretical study of one-hidden-layer neural networks on group imbalance.</em>” IEEE Journal of Selected Topics in Signal Processing (<b>JSTSP</b>), 2024.</p></li>
+
+   <li><p>Hongkang Li, Meng Wang, <b>Shuai Zhang</b>, Sijia Liu, Pin-Yu Chen. “<em>Learning on Transformers is Provable Low-Rank and Sparse: A One-layer Analysis.</em>” IEEE Sensor Array and Multichannel Signal Processing Workshop (<b>IEEESAM</b>), 2024.</p></li>
+
+   
 <li><p><b>Shuai Zhang</b>, Hongkang Li, Meng Wang, Miao Liu, Pin-Yu Chen, Songtao Lu, Sijia Liu, Keerthiram Murugesan, Subhajit Chaudhury. “<em>On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Epsilon-Greedy Exploration.</em>” Neural Information Processing Systems (<b>NeurIPS</b>), 2023.
 </li>
    
