--- a/publications.html
+++ b/publications.html
@@ -40,8 +40,7 @@
   
    <li><p>Hongkang Li, <b>Shuai Zhang</b>, Meng Wang, Yihua Zhang, Pin-Yu Chen, Sijia Liu. “<em>Does promoting the minority group always improve generalization? A theoretical study of one-hidden-layer neural networks on group imbalance.</em>” IEEE Journal of Selected Topics in Signal Processing (<b>JSTSP</b>), 2024.</p></li>
 
-   <li><p>Hongkang Li, Meng Wang, <b>Shuai Zhang</b>, Sijia Liu, Pin-Yu Chen. “<em>Learning on Transformers is Provable Low-Rank and Sparse: A One-layer Analysis.</em>” IEEE Sensor Array and Multichannel Signal Processing Workshop (<b>IEEESAM</b>), 2024.</p></li>
-
+   
    
 <li><p><b>Shuai Zhang</b>, Hongkang Li, Meng Wang, Miao Liu, Pin-Yu Chen, Songtao Lu, Sijia Liu, Keerthiram Murugesan, Subhajit Chaudhury. “<em>On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Epsilon-Greedy Exploration.</em>” Neural Information Processing Systems (<b>NeurIPS</b>), 2023.
 </li>
@@ -68,28 +67,23 @@
   
 <li><p><b>Shuai Zhang</b> *, Yingshuai Hao *, Meng Wang, and Joe H. Chow. “<em>Multichannel Hankel matrix completion through nonconvex optimization.</em>” IEEE Journal of Selected Topics in Signal Processing (<b>JSTSP</b>), no. 4: 617-632. IEEE, 2018. [<a href="Pub/TSP1.pdf">pdf</a>]</p>  
 </li>  
-  
+
+ <li><p>Hongkang Li, Meng Wang, <b>Shuai Zhang</b>, Sijia Liu, Pin-Yu Chen. “<em>Learning on Transformers is Provable Low-Rank and Sparse: A One-layer Analysis.</em>” IEEE Sensor Array and Multichannel Signal Processing Workshop (<b>IEEESAM</b>), 2024.</p></li>
+<li><p><b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen, and Jinjun Xiong. “<em>Guaranteed Convergence of Training Convolutional Neural Networks via Accelerated Gradient Descent.</em>” In 2020 54th Annual Conference on Information Sciences and Systems (<b>CISS</b>), pp. 1-6. IEEE, 2020.</p>  
+</li>  
+   
 <li><p><b>Shuai Zhang</b>, and Meng Wang. “<em>Correction of simultaneous bad measurements by exploiting the low-rank hankel structure.</em>” In 2018 IEEE International Symposium on Information Theory (<b>ISIT</b>), pp. 646-650. IEEE, 2018.</p>  
 </li>  
   
-<li><p>Hongkang Li, <b>Shuai Zhang</b>, Meng Wang. “<em>Learning and generalization of onehidden-layer neural networks, going beyond standard Gaussian data.</em>” In 2022 56th Annual Conference on Information Sciences and Systems (<b>CISS</b>), pp. 1-6. IEEE, 2022.</p>  
+<li><p>Hongkang Li, <b>Shuai Zhang</b>, Meng Wang. “<em>Learning and generalization of one-hidden-layer neural networks, going beyond standard Gaussian data.</em>” In 2022 56th Annual Conference on Information Sciences and Systems (<b>CISS</b>), pp. 1-6. IEEE, 2022.</p>  
 </li>  
+
   
-<li><p><b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen, and Jinjun Xiong. “<em>Guaranteed Convergence of Training Convolutional Neural Networks via Accelerated Gradient Descent.</em>” In 2020 54th Annual Conference on Information Sciences and Systems (<b>CISS</b>), pp. 1-6. IEEE, 2020.</p>  
-</li>  
 
 <li><p><b>Shuai Zhang</b> *, Yingshuai Hao *, Meng Wang, and Joe H. Chow. “<em>Multi-channel missing data recovery by exploiting the low-rank hankel structures.</em>” In 2017 IEEE 7th International Workshop on Computational Advances in Multi-Sensor Adaptive Processing (<b>CAMSAP</b>), pp. 1-5. IEEE, 2017.</p>  
 </li>    
 </ol>
   
-<h2>Preprint</h2>  
-<ol>
-
-  
-  <li><p>Hongkang Li, <b>Shuai Zhang</b>, Meng Wang, Yihua Zhang, Pin-Yu Chen, Sijia Liu. “<em>Does promoting the minority group always improve generalization? A theoretical study of one-hidden-layer neural networks on group imbalance.</em>” Submitted to IEEE Journal of Selected Topics in Signal Processing (<b>JSTSP</b>).
-</li>
-    
-</ol>
 </td>
 </tr>
 </table>
