--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ more efficient AI applications. As part of my research, my interests cover the f
   <center> <img src="research/Research.jpg" width="900" height=auto> </center>
 <h2>Recent news</h2>
 <ul>
+  <li><p>May. 2023: Two papers were accepted to the ICML 2024! </p>
 <li><p>Sep. 2023: Our paper  <a href="https://openreview.net/forum?id=HWGWeaN76q">"On the Convergence and Sample Complexity Analysis of Deep Q-Networks with 
 -Greedy Exploration"</a>  is accepted to the NeurIPS 2023! </p>
 </li>  
