--- a/index.html
+++ b/index.html
@@ -69,11 +69,14 @@ more efficient AI applications. As part of my research, my interests cover the f
 </li>
 </ul>  
   <p> My current research interests lie in advancing the theoretical foundations of Large Language Models, including the analysis of learning paradigms, e.g., contrastive learning and in-context learning, as well as the study of emerging efficient neural network architectures such as Transformer and Mamba. I am also interested in the algorithmic foundations of parameter-efficient transfer learning and sparse learning, particularly for applications involving spatiotemporal data. </p>
-<h2>Recent news</h2>
+<center> <img src="research/Research.jpg" width="900" height=auto> </center>
+<h2>Recent news</h2> 
 <ul>
-  <li><p>Jan. 2025: One paper on <a href="https://openreview.net/forum?id=vRvVVb0NAz">task vectors in machine unlearning</a> was accepted to the ICLR, 2025! </p>
-  <li><p>Dec. 2024: Two papers were accepted to the ICCASP! </p>
-    <li><p>Sep. 2024: Welcome, Haixu and Mugunthan, to NJIT! </p>
+  <li><p>Jan. 2025: One paper on <a href="https://openreview.net/forum?id=vRvVVb0NAz">task vectors in machine unlearning</a> was accepted to the ICLR, 2025! </p></li> 
+  <li><p>Dec. 2024: Two papers were accepted to the ICCASP! </p></li>
+  <li><p>October 2024: Excited to serve as the editor of the book <em>Generative AI in Wireless Communication</em>, published by Elsevier! Expected release: October 2025.</p></li>
+    <li><p>Sep. 2024: Welcome, Haixu and Mugunthan, to the AOE (Algorithmic and Optimization Foundations of Efficient Learning) Lab! </p></li> 
+  <li><p>May. 2024: Glad to receive the NJIT seed Grant! </p></li> 
   <li><p>May. 2024: Two papers on <a href="https://arxiv.org/abs/2405.03949">Federated Contrastive Learning</a>  and  <a href="https://arxiv.org/abs/2405.15920">Transfer Reinforcement Learning via Successor Feature</a> were accepted to the ICML 2024! </p>
 <li><p>Sep. 2023: Our paper  <a href="https://openreview.net/forum?id=HWGWeaN76q">"On the Convergence and Sample Complexity Analysis of Deep Q-Networks with 
 -Greedy Exploration"</a>  is accepted to the NeurIPS 2023! </p>
