--- a/Teaching.html
+++ b/Teaching.html
@@ -34,6 +34,10 @@
 </li>
 <li><p> CS 732 Advanced Machine Learning (Machine Learning Theory) (Spring 2024).
 </li>
+  <li><p> CS 732 Advanced Machine Learning (Machine Learning Theory) (Fall 2025).
+</li>
+  <li><p> DS 675 Machine Learning (Spring 2025).
+</li>
 </li>
 </ul>
 </td>
