--- a/research.html
+++ b/research.html
@@ -66,7 +66,7 @@
    <p><center> <img src="research/NP1.png" width="750" height=auto> </center></p>
   
   
-  <p><li> <b>First, we provide the theoretical guarantees for using magnitude-based pruning in finding the "winning ticket". </b> Specifically, we proves that the neuron weights that learns class-irrevelant features, e.g., background/noise features, tend to have a small magnitude. Therefore, removing the neuron weights with small magnitude will not change the expressive power of the neural network in learning good features (class-relevant features).  
+  <p><li> <b>First, we provide the theoretical guarantees for using magnitude-based pruning in finding the "winning ticket". </b> Specifically, we proves that the neuron weights that learns class-irrevelant features, e.g., background/noise features, tend to have a small magnitude. Therefore, removing the neuron weights with a small magnitude will not change the expressive power of the neural network in learning good features (class-relevant features).  
 </li></p>
   
   <p><center> <img src="research/NT5.PNG" width="750" height=auto> </center></p>
