--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@ more efficient AI applications. As part of my research, my interests cover the f
 <h2>Recent news</h2> 
 <ul>
   <li><p>Jan. 2025: One paper on <a href="https://openreview.net/forum?id=vRvVVb0NAz">task vectors in machine unlearning</a> was accepted to the ICLR, 2025! </p></li> 
-  <li><p>Dec. 2024: Two papers were accepted to the ICCASP! </p></li>
+  <li><p>Jan. 2025: One paper on <a href="https://ieeexplore.ieee.org/abstract/document/10852195">Unmanned underwater vehicle</a> was accepted to IEEE Internet of Things Journal! </p></li> 
+  
+  <li><p>Dec. 2024: Two papers were accepted to the ICASSP! </p></li>
+  <li><p>Nov. 2024: One paper was accepted to IEEE Sensor Array and Multichannel Signal Processing (SAM)! </p></li>
   <li><p>October 2024: Excited to serve as the editor of the book <em>Generative AI in Wireless Communication</em>, published by Elsevier! Expected release: October 2025.</p></li>
     <li><p>Sep. 2024: Welcome, Haixu and Mugunthan, to the AOE (Algorithmic and Optimization Foundations of Efficient Learning) Lab! </p></li> 
   <li><p>May. 2024: Glad to receive the NJIT seed Grant! </p></li> 
